--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "babel-plugin-component": "^1.1.1",
+    "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.5",
     "vue": "^2.6.11"
