--- a/src/manifest.development.json
+++ b/src/manifest.development.json
@@ -4,6 +4,10 @@
     "description": "xxsss",
     "version": "0.0.1",
     "options_page": "options.html",
+    "permissions": [
+        "http://*/",
+        "https://*/"
+    ],
     "browser_action": {
         "default_popup": "popup.html"
     },
