--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "axios": "^0.21.1",
     "babel-plugin-component": "^1.1.1",
     "cheerio": "^1.0.0-rc.10",
+    "file-saver": "1.3.3",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.5",
-    "vue": "^2.6.11"
+    "script-loader": "^0.7.2",
+    "vue": "^2.6.11",
+    "xlsx": "^0.11.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
